# listingautopilot

./: .env.template  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: README
alembic/versions/: 0002_assets_designs.py  63b9a5e4570d_noop_after_assets_designs.py
dashboard/: streamlit_app.py
docs/: API.md  FUTURE_SCOPE.md  HLD.md  LLD.md  REQUIREMENTS.md  USER_FLOW.md
docs/db/: alembic.md
listingautopilot/: Dockerfile.app  Makefile  README.md  docker-compose.yml
listingautopilot/.streamlit/: config.toml
listingautopilot/alembic/: env.py
listingautopilot/alembic/versions/: 0001_initial_project_persistence.py
listingautopilot/docs/: HLD.md  LLD.md
listingautopilot/docs/db/: alembic.md
listingautopilot/scripts/: run_api.sh  run_dashboard.sh  test.sh
listingautopilot/src/listingautopilot/: __init__.py  config.py
listingautopilot/src/listingautopilot/api/: dependencies.py  designs.py  generation.py  health.py  providers.py
scripts/: run_api.sh  run_dashboard.sh  test.sh
src/listingautopilot/: exceptions.py  logging.py  main.py
src/listingautopilot/analysis/: __init__.py  creative_planner.py  design_json_builder.py  listing_scorer.py  product_analyzer.py
src/listingautopilot/api/: assets.py  projects.py
src/listingautopilot/db/: __init__.py
src/listingautopilot/domain/: __init__.py
src/listingautopilot/exporters/: __init__.py
src/listingautopilot/image/: design_renderer.py
src/listingautopilot/llm/: providers.py
tests/integration/: conftest.py
tests/integration/apis/: test_generation_api.py
(+41 files in other folders)
